--- a/src/comps/comps.css
+++ b/src/comps/comps.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 500px;
-    height: 500px;
+    width: 100vw;
+    height: auto;
 }
 
 .middleButtonRow{
@@ -14,43 +14,93 @@
     align-items: center;
 }
 
+#mbr1{
+    position: relative;
+    z-index: 1;
+    top: 15px;
+}
+
+#mbr2{
+    position: relative;
+    bottom: 275px;
+    z-index: 1;
+}
+
+.bottombuttons{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin:10px;
+    position: relative;
+    z-index: 2;
+    bottom: 130px;
+}
+
+.buttonbutton{
+    margin:10px;
+    height: 240px;
+    width: 240px;
+    border-radius: 125px;
+    background-color: rgb(227, 221, 231);
+    border: 10px solid black;
+}
+
 .gamebutton{
-    height: 100px;
-    width: 100px;
+    height: 230px;
+    width: 250px;
+    border-radius: 20px;
+    margin:10px;
+    border: none;
 }
 
 #yellow{
-    background-color: yellow;
+    background-color: rgb(255, 251, 0);
+    border-radius: 500px 90px 90px 90px;
 }
 
 #yellow2{
-    background-color: yellow;
-    opacity: 0.4;
+    background-color: rgb(255, 255, 157);
+    border-radius: 500px 90px 90px 90px;
 }
 
 #green{
     background-color: green;
+    border-radius: 90px 500px 90px 90px;
 }
 
 #green2{
-    background-color: green;
-    opacity: 0.4;
+    background-color: rgb(64, 231, 106);
+    border-radius: 90px 500px 90px 90px;
 }
 
 #red{
     background-color: red;
+    border-radius: 90px 90px 90px 500px;
 }
 
 #red2{
-    background-color: red;
-    opacity: 0.4;
+    background-color: rgb(245, 126, 96);
+    border-radius: 90px 90px 90px 500px;
 }
 
 #blue{
     background-color: blue;
+    border-radius: 90px 90px 500px 90px;
 }
 
 #blue2{
-    background-color: blue;
-    opacity: 0.4;
+    background-color: rgb(0, 183, 255);
+    
+    border-radius: 90px 90px 500px 90px;
+}
+
+.simonouter{
+    height: 555px;
+    width: 600px;
+    background-color: black;
+    border-radius: 600px;
+    position: relative;
+    bottom: 800px;
+
 }
